syntax = "proto3";

option java_package = "com.ofilip.exchange_rates";
option java_multiple_files = true;

message AppProtoStore {
  optional int64 lastRatesLoadTimestampMs = 1;
  optional string overviewBaseCurrency = 2;
  optional string conversionCurrencyFrom = 3;
  optional string conversionCurrencyTo = 4;
  optional bool darkTheme = 5;
}
